# assistent_core

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  docker-compose.override.example.yml  docker-compose.yml  pyproject.toml
.github/releases/: README.md  v0.1.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md
.github/workflows/: ci.yml  deploy.yml  release.yml
assistant/: .env.example  .gitignore  README.md  __init__.py  main.py  mcp_server.py  reminders_worker.py
assistant/agents/: __init__.py  assistant.py  base.py  tool_agent.py
assistant/channels/: __init__.py  email_adapter.py  telegram.py
assistant/config/: __init__.py  default.yaml  loader.py
assistant/core/: __init__.py  agent_registry.py  bus.py  events.py  file_indexing.py  logging_config.py  notify.py  orchestrator.py  qdrant_docs.py  task_manager.py
assistant/dashboard/: __init__.py  app.py  auth.py  config_store.py  make_favicon.py  mcp_endpoints.py
assistant/dashboard/static/css/: layout.css
assistant/dashboard/static/js/: app.js
assistant/docker/: Dockerfile.core  Dockerfile.dashboard  Dockerfile.telegram
assistant/integrations/: __init__.py  calendar.py  todo.py
assistant/memory/: manager.py  short_term.py  summary.py  task_memory.py  user_data.py  vector.py
assistant/models/: __init__.py  cloud.py  gateway.py  lm_studio.py  local.py  streaming.py
assistant/security/: __init__.py  audit.py  command_whitelist.py  sandbox.py
assistant/skills/: __init__.py  base.py  checklist.py  document_index_skill.py  file_ref.py  filesystem.py  git.py  git_platform.py  index_repo_skill.py  integrations_skill.py  mcp_adapter.py  memory_control.py  registry.py  runner.py  search_repos_skill.py  send_email_skill.py  shell.py  tasks.py  vector_rag.py
assistant/tests/: conftest.py  mcp_mock_server.py  test_agents.py  test_audit.py  test_bus.py  test_channels.py  test_config.py  test_dashboard.py  test_dashboard_auth.py  test_document_index_skill.py  test_email_adapter.py  test_events.py  test_file_indexing.py  test_git.py  test_git_platform.py  test_index_repo_skill.py  test_integration.py  test_integrations.py  test_lm_studio.py  test_logging_config.py  test_mcp_endpoints.py  test_mcp_http_api.py  test_mcp_mock.py  test_memory.py  test_models.py  test_notify.py  test_orchestrator.py  test_qdrant_docs.py  test_restart_worker.py  test_search_repos_skill.py  test_security.py  test_send_email_skill.py  test_skills.py  test_task_manager.py  test_tasks_skill.py
docker/: requirements-dashboard.txt  requirements.txt
docs/: ACCEPTANCE.md  ANALYTICS_AND_ROADMAP_2025.md  ANALYTICS_AND_ROADMAP_2026.md  AUDIT.md  AUDIT_V2.md  BACKEND_STACK.md  CHANNELS_AND_FRONTEND.md  CONTEXT_AND_MEMORY.md  CONVENTIONAL_COMMITS.md  CORE_PRODUCT.md  DASHBOARD_AUTH.md  DOCKER_UPDATE_WITHOUT_REBUILD.md  DOCUMENTATION_AUDIT.md  FRONTEND_STACK.md  GIT_SKILL.md  INTEGRATIONS_TODO_CALENDAR.md  ITERATIONS_ROADMAP.md  MCP_DEV_SERVER.md  RAG_QDRANT.md  README.md  RESTART_WORKER.md  ROADMAP.md  ROADMAP_0.2.1.md  ROADMAP_0.2.2.md  TASKS_REQUIREMENTS.md  TASKS_SKILL.md  TELEGRAM_CHANNEL.md  UX_UI_ROADMAP.md
scripts/: restart_worker.py
