[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-core"
version = "0.2.5"
description = "Modular personal AI assistant with Telegram, skills, and local/cloud models"
readme = "assistant/README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "openai>=1.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
# Установка без extras (pip install .) — минимальный профиль: ядро + telegram + tasks + memory, без vector/files/archives/ocr.
minimal = []
vector = [
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]
dashboard = [
    "flask>=3.0.0",
]
files = [
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
]
archives = [
    "py7zr>=0.20.0",
    "rarfile>=4.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
]

[project.scripts]
assistant-core = "assistant.main:main"
telegram-adapter = "assistant.channels.telegram:main"
email-adapter = "assistant.channels.email_adapter:main"
assistant-mcp-server = "assistant.mcp_server:main"
reminders-worker = "assistant.reminders_worker:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["assistant*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["assistant/tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["assistant"]
branch = false
omit = [
    "assistant/tests/*",
    "assistant/__init__.py",
    "assistant/main.py",
    "assistant/reminders_worker.py",
    "assistant/channels/telegram.py",
    "assistant/security/sandbox.py",
    "assistant/models/streaming.py",
    "assistant/dashboard/app.py",
    "assistant/dashboard/config_store.py",
    "assistant/dashboard/auth.py",
    "assistant/dashboard/make_favicon.py",
    "assistant/dashboard/mcp_endpoints.py",
    "assistant/skills/git.py",
    "assistant/skills/shell.py",
    "assistant/skills/vector_rag.py",
    "assistant/memory/vector.py",
    "assistant/memory/task_memory.py",
    "assistant/memory/summary.py",
    "assistant/memory/user_data.py",
    "assistant/models/cloud.py",
    "assistant/models/lm_studio.py",
    "assistant/skills/filesystem.py",
    "assistant/mcp_server.py",
    "assistant/core/qdrant_docs.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 90

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"assistant/tests/*" = ["S101"]
"assistant/dashboard/app.py" = ["E402"]
